Bug fixed that causes that the video item menu was shown behind the item, when the video is hidden

--- a/client/resources/upv.css
+++ b/client/resources/upv.css
@@ -159,6 +159,7 @@ footer {
 	float: right;
 	margin-left: -26px;
 	margin-top: 6px;
+	z-index:1;
 }
 
 .ps-item-menu li p {
